# 2D-laplace-cuda

./: README.md
jobs/: compile.sh  job.sh
src/: CMakeLists.txt  laplace-cuda.cu  laplace-cuda.h  main-cuda.cu
